external-crates/move/crates/move-compiler/tests/move_2024/typing/unused_macro_arg_method_call.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_2024/typing/unused_macro_arg_method_call.move:5:9
  │
2 │     public struct None()
  │                   ---- To satisfy the constraint, the 'drop' ability would need to be added here
  ·
5 │         _: None,
  │         ^ Cannot ignore values without the 'drop' ability. The value must be used
  ·
9 │         None().ignore!()
  │         ------ The type 'a::m::None' does not have the ability 'drop'
